<resources>
	<string name="app_name">Phonealo</string>
	<string name="service_name">phonealo Service</string>
	<string name="addressbook_label">phonealo</string>
	<string name="notification_title">phonealo</string>
	<string name="wait_dialog_text">Starting up</string>
	<string name="notification_registered">%s registered</string>
	<string name="notification_register_failure">%s failed to register</string>
	<string name="tunnel_host"></string>
	<string name="about_version">phonealo Android %s</string>
	<string name="about_liblinphone_version">phonealo Core %s</string>
	<string name="about_text">© 2018 Apel Global GSMA SRL</string>
	<string name="about_link">www.phonealo.com</string>
	<string name="sync_account_name">phonealo contacts</string>
	<string name="history_date_format">EEE, d MMM</string>
	<string name="history_detail_date_format">yyyy/MM/dd - HH:mm - </string>
	<string name="inapp_popup_date_format">yyyy/MM/dd</string>
	<string name="inapp_popup_date_day">dd</string>
	<string name="messages_date_format">dd/MM, HH:mm</string>
	<string name="messages_list_date_format">dd/MM</string>
	<string name="today_date_format">HH:mm</string>
	<string name="username">Nombre y apellidos</string>
	<string name="phone_number">Numero de telefono</string>
	<string name="display_name">Display name</string>
	<string name="password">Password</string>
	<string name="confirm_password">Password confirmation</string>
	<string name="domain">Domain</string>
	<string name="country">País</string>
	<string name="pin">Introduce el PIN:</string>
	<string name="remote_provisioning_url">URL</string>
	<string name="email">Email</string>
	<string name="delete_text">Are you sure you want to delete your selection?</string>
	<string name="delete">Delete</string>
	<string name="retry">Retry</string>
	<string name="cancel">Cancel</string>
	<string name="accept">Accept</string>
	<string name="continue_text">Continue</string>
	<string name="about">About</string>
	<string name="deny">Deny</string>
	<string name="no_account">No account configured</string>
	<string name="search">Search</string>
	<string name="outgoing">Outgoing</string>
	<string name="incoming">Incoming</string>
	<string name="missed">Missed</string>
	<string name="settings">Settings</string>
	<string name="connect">Connection</string>
	<string name="decline">Decline</string>
	<string name="conference">Conference</string>
	<string name="link">Link</string>
	<string name="link_account_popup">Do you want to link the account %s with your phone number ?</string>
	<string name="maybe_later">Maybe later</string>
	<string name="later">Later</string>
	<string name="no">No</string>
	<string name="ok">Ok</string>
	<string name="yes">Yes</string>
	<string name="link_account">Link account</string>
	<string name="app_description">www.phonealo.com</string>
	<string name="welcome">Welcome</string>
	<string name="assistant">Registro</string>
	<string name="assistant_create_account">Create account</string>
	<string name="assistant_continue">Continue</string>
	<string name="assistant_activate">Activate account</string>
	<string name="assistant_finish">Finish configuration</string>
	<string name="assistant_validate_account">Your account is created. Please check your mails to validate your account. Once it is done, come back here and click on the button.</string>
	<string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
	<string name="assistant_linphone_login_desc">Enter your username and password of phonealo account</string>
	<string name="assistant_login_desc">Introduzca sus datos para registrarse</string>
	<string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
	<string name="transport">Transport</string>
	<string name="assistant_login_linphone">Use phonealo account</string>
	<string name="assistant_login_generic">Use SIP account</string>
	<string name="assistant_remote_provisioning">Fetch remote configuration</string>
	<string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
	<string name="assistant_create_account_part_2">We have sent you a SMS with a validation code.\n\nTo complete your phone number verification, please enter the 4 digit code below:\n</string>
	<string name="assistant_display_name_optional">Display name (optional)</string>
	<string name="assistant_linphone_account">Use your phonealo account</string>
	<string name="assistant_generic_account">Crea tu cuenta</string>
	<string name="assistant_remote_provisioning_title">Fetch remote configuration</string>
	<string name="assistant_fetch_apply">Fetch and apply</string>
	<string name="assistant_login">Registrate</string>
	<string name="assistant_ec_calibration">Echo canceler calibration in progress</string>
	<string name="assistant_remote_provisioning_login">Enter your login</string>
	<string name="assistant_account_not_validated">Your account has not been validated yet.</string>
	<string name="assistant_error_confirmation_code"></string>
	<string name="assistant_account_validated">Your account has been validated.</string>
	<string name="assistant_error_bad_credentials">Incorrect username or password</string>
	<string name="assistant_codec_down_question">Do you agree to download OpenH264 Video Codec provided by Cisco Systems, Inc.?</string>
	<string name="assistant_codec_downloading">Downloading OpenH264 Video Codec provided by Cisco Systems, Inc.</string>
	<string name="assistant_codec_downloaded">OpenH264 Video Codec provided by Cisco Systems, Inc. downloaded.</string>
	<string name="wizard_failed">An error occurred, try again later.</string>
	<string name="wizard_server_unavailable">Server unreachable, verify your network connection.</string>
	<string name="wizard_username_unavailable">This username is already in use.</string>
	<string name="assistant_phone_number_unavailable">This phone number is already in use.</string>
	<string name="wizard_username_incorrect">Your username is invalid.</string>
	<string name="assistant_phone_number_incorrect">Your phone number is invalid.</string>
	<string name="wizard_email_incorrect">Your email is invalid.</string>
	<string name="wizard_password_incorrect">Your password is invalid</string>
	<string name="wizard_passwords_unmatched">Passwords do not match.</string>
	<string name="setup_confirm_username">Your username will be %s.\r\n\r\nIt may differ from your input to match requirements.\r\nDo you accept?</string>
	<string name="first_launch_no_login_password">Please enter your login and password</string>
	<string name="forgot_password">Forgot password ?</string>
	<string name="assistant_choose_country">Seleciona el país</string>
	<string name="select_your_country">Select your Country</string>
	<string name="country_code">(+%s)</string>
	<string name="use_username_instead_or_phone_number">Use a username (optional)</string>
	<string name="use_email_for_validation">Use email address for account validation</string>
	<string name="login_with_username">Use your username and password instead of your phone number</string>
	<string name="phone_number_info_title">What will my phone number be used for?</string>
	<string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\nYou will see in your addressbook who is using phonealo and your friends will know that they can rach you on phonealo as well.\n</string>
	<string name="phone_number_link_info_content">\nYour friends will find your more easily if you link your account to your phone number\n\nYou will see in your addressbook who is using phonealo and your friends will know that they can rach you on phonealo as well.\n</string>
	<string name="invalid_email">Invalid email</string>
	<string name="account_already_exist">Account already exist</string>
	<string name="invalid_username">Invalid username</string>
	<string name="invalid_domain">Invalid domain</string>
	<string name="invalid_route">Invalid route</string>
	<string name="username_too_short">Username too short</string>
	<string name="username_too_long">Username too long</string>
	<string name="username_invalid_size">Username length invalid</string>
	<string name="phone_number_too_long">Phone number too long</string>
	<string name="phone_number_too_short">Phone number too short</string>
	<string name="phone_number_invalid">Invalid phone number</string>
	<string name="password_too_short">Password too short</string>
	<string name="password_too_long">Password too long</string>
	<string name="request_failed">Failed to query the server. Please try again later</string>
	<string name="transport_unsupported">Unsupported transport</string>
	<string name="inapp">In-app</string>
	<string name="inapp_notification_title">In-app purchase</string>
	<string name="inapp_notification_trial_expire">The trail period expires on %s</string>
	<string name="inapp_notification_account_expire">The subscription period expires on %s</string>
	<string name="address_bar_hint">Introduzca el número</string>
	<string name="no_call_history">No call in your history</string>
	<string name="no_missed_call_history">No missed call in your history</string>
	<string name="delete_history_log">Do you want to delete selected call log?</string>
	<string name="today">hoy</string>
	<string name="yesterday">ayer</string>
	<string name="no_contact">No contact in your address book.</string>
	<string name="no_sip_contact">No SIP contact in your address book.</string>
	<string name="delete_contacts">Do you want to delete selected contacts?</string>
	<string name="delete_contact">Do you want to delete selected contact?</string>
	<string name="sip_address">numero de telefono</string>
	<string name="contact_first_name">Nombre</string>
	<string name="contact_last_name">Apedillos</string>
	<string name="contact_organization">Empresa</string>
	<string name="no_chat_history">There are no conversations</string>
	<string name="no_balance">No balance</string>
	<string name="delete_conversation">Do you want to delete selected conversation?</string>
	<string name="delete_message">Do you want to delete selected message?</string>
	<string name="remote_composing">Remote is writing...</string>
	<string name="share_picture_size_small">Small</string>
	<string name="share_picture_size_medium">Medium</string>
	<string name="share_picture_size_large">Large</string>
	<string name="share_picture_size_real">Real size</string>
	<string name="text_copied_to_clipboard">Text copied to clipboard</string>
	<string name="copy_text">Copy text</string>
	<string name="image_picker_title">Select source</string>
	<string name="image_saved">Image saved</string>
	<string name="image_not_saved">Error, image not saved</string>
	<string name="wait">Please wait...</string>
	<string name="processing_image">Processing image, can take up to a few seconds depending on the size of the file</string>
	<string name="status_connected">Registrado</string>
	<string name="status_not_connected">No registrado</string>
	<string name="content_description_dialer">Dialer</string>
	<string name="content_description_menu">Menu</string>
	<string name="content_description_add_contact">Add to contacts</string>
	<string name="content_description_call">Call</string>
	<string name="content_description_backspace">Backspace</string>
	<string name="content_description_dialer_back">Return to dialer</string>
	<string name="content_description_history">History button</string>
	<string name="content_description_chat_button">Chat button</string>
	<string name="content_description_contacts">Contacts button</string>
	<string name="content_description_call_quality">Call quality</string>
	<string name="content_description_encryption">Encryption</string>
	<string name="content_description_username_field">Username field</string>
	<string name="content_description_display_field">Display name field</string>
	<string name="content_description_domain_field">Domain field</string>
</resources>