<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<fragment
		android:id="@+id/status"
		android:name="org.linphone.StatusFragment"
		android:layout_width="match_parent"
		android:layout_height="18dp"
		tools:layout="@layout/status" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/status">

			<RelativeLayout
				android:id="@+id/top_bar"
				android:background="@color/colorF"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:visibility="gone"
				android:layout_alignParentTop="true">

				<TextView
					android:id="@+id/menu_name"
					android:text="@string/settings"
					style="@style/font1"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_centerInParent="true"
					android:gravity="center_vertical"/>

				<ImageView
					android:id="@+id/cancel"
					android:src="@drawable/dialer_back"
					android:contentDescription="@string/content_description_dialer_back"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:padding="15dp"
					android:layout_centerInParent="true"
					android:layout_alignParentRight="true"/>

			</RelativeLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_above="@id/footer"
				android:layout_below="@id/top_bar">

				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_alignParentTop="true">

					<LinearLayout
						android:id="@+id/fragmentContainer"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="horizontal" />
				</FrameLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/footer"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_alignParentBottom="true"
				android:orientation="horizontal">

				<RelativeLayout
					android:id="@+id/history"
					android:background="@drawable/footer_button"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent">

					<ImageView
						android:src="@drawable/footer_history"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:contentDescription="@string/content_description_history"
						android:padding="15dp"
						android:layout_centerInParent="true"
						android:background="@color/colorH" />

					<View
						android:id="@+id/history_select"
						android:background="@color/colorC"
						android:layout_width="match_parent"
						android:layout_height="5dp"
						android:layout_alignParentBottom="true"
						android:visibility="gone"/>

					<TextView
						android:id="@+id/missed_calls"
						android:background="@drawable/history_chat_indicator"
						style="@style/font18"
						android:layout_width="20dp"
						android:layout_height="20dp"
						android:layout_margin="15dp"
						android:gravity="center"
						android:visibility="gone"/>

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/contacts"
					android:background="@drawable/footer_button"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent">

					<ImageView
						android:src="@drawable/footer_contacts"
						android:contentDescription="@string/content_description_contacts"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="15dp"
						android:layout_centerInParent="true"
						android:background="@color/colorH" />

					<View
						android:id="@+id/contacts_select"
						android:background="@color/colorC"
						android:layout_width="match_parent"
						android:layout_height="5dp"
						android:layout_alignParentBottom="true"
						android:visibility="gone"/>
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/dialer"
					android:background="@drawable/footer_button"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent">

					<ImageView
						android:src="@drawable/footer_dialer"
						android:contentDescription="@string/content_description_dialer"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="15dp"
						android:layout_centerInParent="true"
						android:background="@color/colorH" />

					<View
						android:id="@+id/dialer_select"
						android:layout_width="match_parent"
						android:layout_height="5dp"
						android:layout_alignParentBottom="true"
						android:background="@color/colorA" />

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/balance"
					android:background="@color/colorH"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="match_parent">

					<TextView
						android:id="@+id/balance_char"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:contentDescription="@string/content_description_chat_button"
						android:gravity="center"
						android:text="$"
						android:textColor="@color/colorA"
						android:textSize="30dp" />

					<View
						android:id="@+id/balance_select"
						android:layout_width="match_parent"
						android:layout_height="5dp"
						android:layout_alignParentBottom="true"
						android:background="@color/colorA"
						android:visibility="gone" />

					<TextView
						android:id="@+id/missed_chats"
						android:background="@drawable/history_chat_indicator"
						style="@style/font18"
						android:layout_width="20dp"
						android:layout_height="20dp"
						android:layout_margin="15dp"
						android:gravity="center"
						android:visibility="gone"/>

				</RelativeLayout>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/fragmentContainer2"
				android:visibility="gone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			</LinearLayout>
		</RelativeLayout>

		<!-- Side Menu -->

</RelativeLayout>